Deploy.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: myapp
