Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - local.my-app.com
  rules:
  - host: local.my-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 80
# spec:
#   rules:
#   - host: local.my-app.com
#     http:
#       paths:
#       - backend:
#           serviceName: my-app-service
#           servicePort: 80
#         path: /
#         pathType: Prefix
